tdf#155486 Adding fonts to .odt when there is "no perfect match"

Problem does not seem to have any
 relation with .otf files management.
Problem arises when:
  - we use a font with setting certain
    family/bold/italic/pitch values
  - we have this font installed, but
    we don't have a version with
    matching
    family/bold/italic/pitch
In this case the "not a perfect match"
 fonts were not saved in the .odt

Change-Id: Ie4e2b9c34b79ac99f03c57bed4fdc5f4d718dcc2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153007
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit e7c885389bfb9387acf8a21ea38769e678a76aac)
(cherry picked from commit a3a00555d4b0e07ee921f85ac088e7b17047c6cf)
(cherry picked from commit 4da8ce44a6e6a41d1506ba9087c28896c36a2722)